:sparkles: implementações e melhorias do header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <div class="min-h-screen bg-galaxy-dark text-gray-200 bg-galaxy-stars">
   <app-structure>
-    <header class="py-6 border-b border-gray-800">
-      <app-header></app-header>
-    </header>
-
+    <app-header></app-header>
+    <app-hero></app-hero>
     <main class="py-12 space-y-24">
       <app-education></app-education>
       <app-experience></app-experience>
