:sparkles: Implementado sections - experience e education

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,16 @@
     <app-header></app-header>
     <app-hero></app-hero>
     <main class="py-12 space-y-24">
+      <app-about></app-about>
       <app-education></app-education>
       <app-experience></app-experience>
+      <!-- <app-experience></app-experience>
       <app-technologies></app-technologies>
       <app-projects></app-projects>
-      <app-contact></app-contact>
+      <app-contact></app-contact> -->
     </main>
 
-    <footer class="py-8 border-t border-gray-800">
+    <footer class="py-8">
       <app-footer></app-footer>
     </footer>
   </app-structure>
