--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
       <app-about></app-about>
       <app-education></app-education>
       <app-experience></app-experience>
-      <!-- <app-experience></app-experience>
       <app-technologies></app-technologies>
+      <!--<app-technologies></app-technologies>
       <app-projects></app-projects>
       <app-contact></app-contact> -->
     </main>
