--- a/src/app/sections/education/education.component.html
+++ b/src/app/sections/education/education.component.html
@@ -1,4 +1,4 @@
-<app-section-base title="Educação">
+<app-section-base title="Educação" sectionId="education">
   <div class="timeline">
     <div *ngFor="let edu of educationList" class="timeline-item">
       <div class="timeline-dot"></div>
