--- a/src/app/sections/experience/experience.component.html
+++ b/src/app/sections/experience/experience.component.html
@@ -1,4 +1,4 @@
-<app-section-base title="Experiências">
+<app-section-base title="Experiências" sectionId="experience">
   <div class="timeline-center">
     <div
       *ngFor="let experiente of experienteList; let i = index"
