--- a/src/app/sections/technologies/technologies.component.html
+++ b/src/app/sections/technologies/technologies.component.html
@@ -1,3 +1,3 @@
-<app-section-base title="Tecnologias">
+<app-section-base title="Tecnologias" sectionId="technologies">
   <h1>Tecs</h1>
 </app-section-base>
