:fix: correção da falha de input para secation hero

--- a/src/app/core/modules/hero/hero.component.html
+++ b/src/app/core/modules/hero/hero.component.html
@@ -1,4 +1,4 @@
-<app-section-base>
+<app-section-base sectionId="">
   <div
     class="flex flex-col lg:flex-row items-center justify-between gap-8"
     @fadeInDown
