--- a/src/app/core/modules/header/header.component.html
+++ b/src/app/core/modules/header/header.component.html
@@ -1,25 +1,18 @@
-<header class="py-4">
+<header class="header">
   <app-structure>
-    <div class="flex justify-between items-center py-2">
+    <div class="header__inner">
       <a
         href="https://github.com/JoaoSBarbosa"
         target="_blank"
         rel="noopener noreferrer"
-        title="Acessar gitbub"
+        title="Acessar GitHub"
+        class="logo"
       >
-        <img
-          src="assets/images/logo-3.svg"
-          alt="GitHub Profile"
-          class="w-20 h-20"
-        />
+        <img src="assets/images/logo-3.svg" alt="GitHub Profile" />
       </a>
 
-      <nav class="flex space-x-6 text-gray-300 text-2xl">
-        <a
-          *ngFor="let link of links"
-          href="{{ link.href }}"
-          class="relative px-3 py-1 cursor-pointer after:block after:absolute after:bottom-0 after:left-1/2 after:w-0 after:h-[2px] after:bg-purple-custom/50 after:transition-all after:duration-300 after:ease-in-out hover:after:w-full hover:after:left-0 hover:text-purple-custom transition-colors"
-        >
+      <nav>
+        <a *ngFor="let link of links" href="{{ link.href }}" class="nav-link">
           {{ link.label }}
         </a>
       </nav>
